# plonk-solana

./: .cargo-rdme.toml  .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  package.json
.github/actions/setup/: action.yml
.github/workflows/: rust-tests.yml
crates/plonk-solana/: Cargo.toml
crates/plonk-solana/src/: decompression.rs  lib.rs  plonk.rs  transcript.rs  vk_parser.rs
crates/plonk-solana/test-fixtures/: proof.json
crates/plonk-solana/tests/: compression_test.rs  plonk_verify_test.rs  proptest_compression.rs
crates/plonk-solana/tests/common/: mod.rs
plonk-solana/: Cargo.toml
plonk-solana/src/: errors.rs  fr.rs  g1.rs  g2.rs  lib.rs  plonk.rs  syscalls.rs  transcript.rs  vk_parser.rs
plonk-solana/tests/: compression_test.rs  plonk_multi_output_test.rs  plonk_verify_test.rs  proptest_compression.rs  proptest_fr.rs  proptest_g1_neg.rs  proptest_verifier_agreement.rs  serialization_test.rs
plonk-solana/tests/common/: mod.rs
scripts/: clean.sh  setup.sh
tests/arkworks-verifier/: Cargo.toml
tests/arkworks-verifier/src/: lib.rs  parse.rs  transcript.rs  verifier.rs
tests/bench-program/: BENCHMARKS.md  Cargo.toml  build.rs
tests/bench-program/src/: lib.rs
tests/bench-program/src/benchmarks/: fr_ops.rs  g1_ops.rs  mod.rs  top_level.rs  transcript_ops.rs  verification_ops.rs
tests/bench-program/src/instructions/: discriminator.rs  mod.rs  process_instruction_0_29.rs  process_instruction_30_59.rs
tests/bench-program/tests/: bench.rs
tests/fixtures/circuits/: mul1.circom  mul2.circom  mul3.circom  mul4.circom  mul5.circom  multiplier.circom
tests/fixtures/data/: proof.json
tests/fixtures/data/mul1/: proof.json
tests/fixtures/data/mul2/: proof.json  public.json  verification_key.json
tests/fixtures/data/mul3/: proof.json  public.json  verification_key.json
tests/fixtures/data/mul4/: proof.json  public.json  verification_key.json
tests/fixtures/data/mul5/: proof.json  public.json  verification_key.json
tests/fixtures/scripts/: clean.sh  setup.sh
tests/integration-program/: Cargo.toml  build.rs
tests/integration-program/src/: lib.rs
tests/integration-program/tests/: litesvm_test.rs
tests/ts-integration/: plonk-multi-circuit.test.ts  plonk-verify.test.ts  serialize.ts  tsconfig.json  vitest.config.ts
