[package]
name = "plonk-solana"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    "cfg(target_os, values(\"solana\"))",
]

[features]
bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
zerocopy = ["dep:zerocopy"]
borsh = ["dep:borsh"]
serde = ["dep:serde"]
vk = ["serde", "dep:serde_json", "dep:num-bigint"]
bench = []

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
light-hasher.workspace = true
thiserror.workspace = true
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
bytemuck_derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
zerocopy = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }

[target.'cfg(target_os = "solana")'.dependencies]
pinocchio.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-ec.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
proptest.workspace = true
num-bigint.workspace = true
