[package]
name = "plonk-solana"
version = "0.1.0"
edition = "2021"

[features]
vk = ["serde", "serde_json"]

[dependencies]
ark-bn254 = "0.5"
ark-ff = { version = "0.5", features = ["std"] }
num-bigint = "0.4"
solana-bn254 = "3"
light-hasher = { version = "5.0", features = ["keccak"] }
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
