[package]
name = "plonk-solana"
version = "0.1.0"
edition = "2021"

[features]
vk = ["serde", "serde_json"]

[dependencies]
ark-bn254.workspace = true
ark-ff = { workspace = true, features = ["std"] }
num-bigint.workspace = true
solana-bn254.workspace = true
light-hasher.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
proptest.workspace = true
