[package]
name = "integration-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
plonk-solana = { path = "../../crates/plonk-solana" }
solana-program = "2.2"
blake3 = "=1.8.2"

[build-dependencies]
plonk-solana = { path = "../../crates/plonk-solana", features = ["vk"] }

[dev-dependencies]
litesvm = "0.9"
solana-compute-budget = "~3.1"
solana-keypair = "~3.1"
solana-signer = "~3.0"
solana-instruction = "~3.1"
solana-message = "~3.0"
solana-transaction = { version = "~3.0", features = ["verify", "bincode"] }
solana-pubkey = "~3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
plonk-solana = { path = "../../crates/plonk-solana" }
