[package]
name = "integration-program"
version = "0.1.0"
edition = "2021"
publish = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    "cfg(target_os, values(\"solana\"))",
    "cfg(feature, values(\"custom-heap\", \"custom-panic\"))",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
plonk-solana = { workspace = true, features = ["borsh"] }
borsh.workspace = true
solana-program.workspace = true
blake3.workspace = true

[build-dependencies]
plonk-solana = { workspace = true, features = ["vk"] }

[dev-dependencies]
plonk-solana = { workspace = true, features = ["vk", "borsh"] }
borsh.workspace = true
litesvm.workspace = true
solana-compute-budget.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
solana-instruction.workspace = true
solana-message.workspace = true
solana-transaction.workspace = true
solana-pubkey.workspace = true
